Grid doesn't follow the spec quite correctly in terms of stretching of grid items.
Categories
(Core :: Layout: Grid, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox123 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(2 files)
| Assignee | ||
Comment 1•2 years ago
|
||
The spec says scroll container, so overflow: visible and clip shouldn't
be different. Also Without this fix the other patch causes a failure in
grid-item-overflow-stretch-005.html.
As noted in the comments, we should probably not look at the computed
value but the box type instead, but that's probably worth fixing in a
separate bug.
Updated•2 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
This is a minor perf optimization that I noticed while going through
this code. No behavior change.
Depends on D197052
Updated•2 years ago
|
Updated•2 years ago
|
Comment 5•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/0e4346863660
https://hg.mozilla.org/mozilla-central/rev/fa6dd9a5ca90
Comment 7•2 years ago
•
|
||
Sorry for not noticing during review -- it looks like our changes go against a CSSWG resolution (which is still pending a spec update), as discussed in https://github.com/w3c/csswg-drafts/issues/7714#issuecomment-1879319762
We changed here to depend on scroll-container-ness but should instead be depending on the computed overflow (even if it doesn't create a scroll container). Or, if you feel strongly about scroll-container-ness, we need to push for a spec change.
We should probably backout (or revert the behavior in a followup that preserves some of the worth-keeping things here) -- emilio, would you mind doing that?
| Assignee | ||
Comment 8•2 years ago
|
||
How so? IsScrollableOverflow is checking the computed value, not scroll-container-ness, right?
What you're describing is what the original version of the path did, but I changed to use IsScrollableOverflow as per the resolution and offline discussion. I even left a comment in https://hg.mozilla.org/mozilla-central/rev/0e4346863660#l2.14 right?
| Assignee | ||
Comment 9•2 years ago
|
||
I guess your comment was about https://github.com/w3c/csswg-drafts/issues/7714#issuecomment-1879407674
Comment 10•2 years ago
|
||
Indeed it was. Thanks for the clarification; I misinterpreted our <input> behavior (and read too much into the extended-commit-message's mention of "The spec says scroll container...") and misremembered what the patch here was doing.
I think we're good here after all. I'm going to file a followup on amending stretch-grid-item-button-overflow.html to avoid depending on unspecified behavior, though.
Description
•