Bug 1871412 - Fix scroll container checks for automatic minimum size and grid stretching checks. r=dholbert

The spec says scroll container, so overflow: visible and clip shouldn't
be different.

Note that the spec here is pending some edits from
https://github.com/w3c/csswg-drafts/issues/7714 tho.

Differential Revision: https://phabricator.services.mozilla.com/D197052